--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -114,7 +114,8 @@
         }
 
         td:nth-child(2),
-        td:nth-child(3) {
+        td:nth-child(3),
+        td:nth-child(4) {
             text-align: center;
         }
 
@@ -406,9 +407,6 @@
             gap: 10px;
         }
 
-        /* #gameSelect {
-            
-        /* }  */
 
         #players-info {
             max-width: 800px;
