--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -344,6 +344,16 @@
             .hints-table {
                 padding: 15px;
             }
+
+            #prevBtn,
+            #nextBtn,
+            #invertBtn,
+            #screenshotBtn,
+            #screenSaveBtn,
+            #screenUploadBtn {
+                width: 35px;
+                height: 35px;
+            }
         }
 
         @media (max-width: 480px) {
