--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -381,6 +381,29 @@
                 padding: 6px 8px;
                 word-spacing: 4px;
             }
+
+            #prevBtn,
+            #nextBtn,
+            #invertBtn,
+            #screenshotBtn,
+            #screenSaveBtn,
+            #screenUploadBtn {
+                width: 35px;
+                height: 35px;
+            }
+        }
+
+        @media (min-width: 1200px) {
+
+            #prevBtn,
+            #nextBtn,
+            #invertBtn,
+            #screenshotBtn,
+            #screenSaveBtn,
+            #screenUploadBtn {
+                width: 50px;
+                height: 50px;
+            }
         }
 
         .loading {
