--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -153,6 +153,7 @@
             margin: 0px 0;
             display: flex;
             justify-content: space-between;
+            margin-top: 10px;
             align-items: center;
             width: 100%;
         }
