--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -485,6 +485,4 @@
 </content>
 </xai:function_call">\
 <xai:function_call name="attempt_completion">
-    <parameter name="result">Создал веб-приложение `board_viewer.html` для интерактивного отображения доски на основе
-        данных из `games.json`. Оно использует те же assets из `bot/static/`, включая изображения доски и шашек.
-        Приложение позволяет навигировать по ходам, инвертировать доску и выбирать игру из списка.
+    <parameter name="result">
